[project]
name = "rt-communication-plotter"
version = "0.1.0"
description = "CLI plotter for analyzing real-time communication CSV traces"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
]

[project.scripts]
rt-communication-plotter = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
